# Signr

./: .gitignore  CLAUDE.md  README.md  SWIFT_PORT_FEASIBILITY.md  build.sh  project.yml
.github/workflows/: release.yml
Icon.icon/: icon.json
Tests/: BridgeTests.swift
app/: Signr.entitlements
app/App/: RootView.swift  SignrApp.swift
app/Bridge/: Bridge.swift
app/Model/: AppModel.swift  DataCrypto.swift  IconImport.swift  SignOptions+Defaults.swift
app/Views/: ActivitySheet.swift  AuthSheets.swift  Sidebar.swift  SignScreen.swift  Theme.swift
rust/: Cargo.toml  build-xcframework.sh
rust/native_anisette/: Cargo.toml
rust/native_anisette/src/: lib.rs
rust/signr_core/: Cargo.toml
rust/signr_core/src/: lib.rs
rust/signr_core/tests/: device_dedup.rs  ipa_icon.rs  ipa_info.rs  macho_dylib.rs  main_binary_strip.rs  signer_options_mapping.rs  signing_identifier.rs  unpack.rs
